Revision history for Perl module Protocol::DBus

0.05 
- Add proper UNIX_FD support.

0.04 Wed 14 Nov 2018
- Fix DICT unmarshaling alignment.
- Add receive.pl example and two contributed ones.

0.03 Sun 11 Nov 2018
- Disable UNIX_FD stuff until it can be made to work.

0.02 Sun 11 Nov 2018
- Fix some examples, remove broken example script

0.01 Tue 2 Oct 2018
- Initial release