@@ -21,7 +21,6 @@ my $dbus = Protocol::DBus::Client::system();
 $dbus->preserve_variant_signatures(1);
 
 $dbus->do_authn();
-use Carp::Always;
 
 my $got_response;
 
