@@ -2,6 +2,8 @@ Revision history for Perl module Protocol::DBus
 
 0.05 
 - Add proper UNIX_FD support.
+- Add preserve_variant_signatures() mode.
+- Add send_signal() method.
 
 0.04 Wed 14 Nov 2018
 - Fix DICT unmarshaling alignment.
